fix: Changed spacing in header

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
     /* border: 1px solid #fff;  For debugging */
     width: 900px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
   }
 
   .links {
@@ -42,7 +42,7 @@
     height: 300px;
     /* border: 1px dashed black; */
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
   }
 
